# rust-tui-music-player

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV_README.md  LICENSE  README.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: main.rs
src/app/: mod.rs  navigation.rs  search_helpers.rs
src/config/: mod.rs
src/download/: mod.rs
src/event/: commands.rs  jobs.rs  mod.rs
src/fs/: mod.rs  normalize.rs
src/input/: mod.rs  text.rs
src/lyrics/: loader.rs  mod.rs  orchestrator.rs  parser.rs  state.rs
src/lyrics_fetch/: lrclib.rs  mod.rs
src/metadata/: exiftool.rs  ffprobe.rs  mod.rs  model.rs  parse.rs  write.rs
src/player/: mod.rs  mpv.rs
src/search/: mod.rs
src/ui/: mod.rs
src/youtube/: mod.rs
